0.2.2
=====
- [bug] setup.py won't install argparse if on
  Python 2.7/3.2

0.2.1
=====
- [bug] Fixed the generation of CHECK constraint,
  regression from 0.2.0 [#26]

0.2.0
=====
- [feature] API rearrangement allows everything
  Alembic does to be represented by contextual
  objects, including EnvironmentContext,
  MigrationContext, and Operations.   Other
  libraries and applications can now use
  things like "alembic.op" without relying
  upon global configuration variables.
  The rearrangement was done such that 
  existing migrations should be OK, 
  as long as they use the pattern 
  of "from alembic import context" and 
  "from alembic import op", as these
  are now contextual objects, not modules.
  [#19]

- [feature] The naming of revision files can
  now be customized to be some combination
  of "rev id" and "slug", the latter of which
  is based on the revision message.
  By default, the pattern "<rev>_<slug>"
  is used for new files.   New script files
  should include the "revision" variable
  for this to work, which is part of 
  the newer script.py.mako scripts.
  [#24]

- [bug] env.py templates call 
  connection.close() to better support 
  programmatic usage of commands; use
  NullPool in conjunction with create_engine()
  as well so that no connection resources
  remain afterwards.  [#25]

- [bug] fix the config.main() function to honor
  the arguments passed, remove no longer used
  "scripts/alembic" as setuptools creates this
  for us.  [#22]

- [bug] Fixed alteration of column type on 
  MSSQL to not include the keyword "TYPE".

- [feature] Can create alembic.config.Config
  with no filename, use set_main_option()
  to add values.  Also added set_section_option()
  which will add sections.  [#23]

0.1.1
=====
- [bug] Clean up file write operations so that
  file handles are closed.

- [feature] PyPy is supported.

- [feature] Python 2.5 is supported, needs 
  __future__.with_statement

- [bug] Fix autogenerate so that "pass" is 